# spotify_tracker

./: .gitignore  README.md  main.py  pyproject.toml
code/classes/: Song.py
code/spotify/: songs.py
code/spotify_api/: spotify_keys.py  spotify_requests.py
