[tool.poetry]
name = "spotify-tracker"
version = "0.1.0"
description = "a method to track your spotify actions"
authors = ["alex guerrero"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
